UPDATE XGBoost and home

--- a/_posts/ML_study/2000-01-11-XGBoost.md
+++ b/_posts/ML_study/2000-01-11-XGBoost.md
@@ -20,9 +20,9 @@ XGBOOST는 Gradient Boost보다 메모리 효율이 좋고, 속도도 빠르며,
 
 &nbsp;
 
-### XGBOOST 상세 학습 과정
+### XGBOOST 상세 학습 과정(regression)
 
-아래의 데이터가 주어졌을경우 XGBOOST는 아래의 식을 토대로 다음(1~6)과 같은 방법으로 학습을 수행한다.($\gamma는 본예시에서는 고려하지 않는다$)
+아래의 데이터가 주어졌을경우 XGBOOST는 아래의 식을 토대로 다음(1~5)과 같은 방법으로 학습을 수행한다.($\gamma는 본예시에서는 고려하지 않는다$)
 
 <center><img src="{{ "/assets/images/XGBOOST_1.PNG" | absolute_url }}" width = 'auto' height = 'auto' alt="" /></center>
 
@@ -49,11 +49,44 @@ XGBOOST는 Gradient Boost보다 메모리 효율이 좋고, 속도도 빠르며,
 5 - residual(1)을 이용하여 새로운 tree를 생성하고, 위의 작업을 residual이 충분히 줄어들때까지 반복한다. 
 
 훈련이 종료된 뒤 신규 데이터에 대한 추정은 다음과 같이 이루어진다. ($if\;num(tree)\;=\;n$)
-$$
-\hat{y}\;=\;\hat{y}_{initial}\;+\;(\epsilon\;\times\;output_{tree_1})\;+\;(\epsilon\;\times\;output_{tree_2})\;+\;\cdots\;+\;(\epsilon\;\times\;output_{tree_n})
-$$
 
+> $$
+> \hat{y}\;=\;\hat{y}_{initial}\;+\;(\epsilon\;\times\;output_{tree_1})\;+\;(\epsilon\;\times\;output_{tree_2})\;+\;\cdots\;+\;(\epsilon\;\times\;output_{tree_n})
+> $$
+
+&nbsp;
 
 ### Practice (Python)
 
 [Boston Data](https://github.com/Hyunjun-Bruce-Lee/ML_study/blob/master/XGBoost/XGBoost(regression).py)
+
+&nbsp;
+
+&nbsp;
+
+&nbsp;
+
+### XGBOOST 상세 학습 과정(classification)
+
+XGBoost에서의 Classification(분류)문제의 경우 Gradient Boosting의 Classification 문제와 같이 odds,log(odds),probability의 개념을 사용하고, 2진 분류의 경우 BCE(Binary Cross Entropy)를, 다중분류의 경우 Softmax Objective Function을 loss function으로 이용한다.
+
+Loss function이 달라짐에 따라 output value와 similarity에 대한 계산 식이 다음과 같이 변경된다.
+
+> $$
+> \begin{align*}
+> output\;value(O)\;&=\;\frac{\sum_{1=1}^nresidual}{\sum_{1=1}^np_i(1-p_i)}\;\;\;(p\;:\;probability)\\
+> \;\\
+> similarity\;score\;&=\;\frac{(\sum_{1=1}^nresidual_i)^2}{\sum_{1=1}^np_i(1-p_i)}
+> \end{align*}
+> $$
+
+이외의 과정은 동일하나, 훈련이 종료된후 신규 데이터에 대한 추정치를 계산할 시 계산되는 최종 값을 그대로 이용하는것이 아닌 sigmoid 함수에 최종 값을 적용시켜 범주형으로 변환하여 최종 분류 예측치를 도출한다.
+
+&nbsp;
+
+### Practice (Python)
+
+[Cancer Data](https://github.com/Hyunjun-Bruce-Lee/ML_study/blob/master/XGBoost/XGBoost(classification).py)
+
+[Iris Data](https://github.com/Hyunjun-Bruce-Lee/ML_study/blob/master/XGBoost/XGBoost(classification-2).py)
+
